z-index fix

--- a/youthgetinspired/css/lead.scss
+++ b/youthgetinspired/css/lead.scss
@@ -218,7 +218,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1000;
+  z-index: 10000;
   margin: auto;
   width: 100%;
   height: 100%;
