--- a/youthgetinspired/css/main.scss
+++ b/youthgetinspired/css/main.scss
@@ -200,7 +200,7 @@ img {
   padding: 1em 2em;
   position: sticky;
   top: 0;
-  z-index: 1000000;
+  z-index: 9999;
   background-color: #fff;
   .logo {
     float: left;
